@@ -1,1 +1,1 @@
-LINBO 2.4.2 [21st Century Schizoid Man]
+LINBO 2.4.2-7: 21st Century Schizoid Man
